# trustworthy-model-registry

./: .coverage  .flake8  .gitignore  Dockerfile  README.md  README_Selenium.md  coverage.xml  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml  python-tests.yml  requirements.txt  selenium_example.py  start_frontend.py  start_local.sh  test_endpoints.py  verify_frontend.sh
.github/: BRANCH_PROTECTION.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml
examples/: custom_test.txt  lineage_and_tree_score_example.py  reproducibility_example.py  reviewedness_example.py
src/: __init__.py
src/acme_cli/: __init__.py  api.py  context.py  input_loader.py  lineage_graph.py  llm.py  load_test.py  net_score.py  runner.py  score_helpers.py  score_registry.py  scoring.py  scoring_engine.py  types.py  urls.py  utils.py
src/acme_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/acme_cli/api/: __init__.py  main.py  middleware.py  monitoring.py  server.py
src/acme_cli/frontend/: README.md  app.js  enumerate.html  index.html  ingest.html  license_check.html  model.html  styles.css  upload.html
src/acme_cli/hf/: __init__.py  client.py  local_cache.py
src/acme_cli/metrics/: base.py  bus_factor.py  code_quality.py  dataset_code.py  license.py  (+8 more)
tests/: test_api_license.py  test_api_models.py  test_api_regex.py  test_context.py  test_cost_endpoint.py  test_endpoints.py  test_frontend_api_integration.py  test_frontend_selenium.py  test_frontend_units.py  test_hf_client.py  test_hf_client_selection.py  test_hf_real_repo_selection.py  test_ingest_cleanup.py  test_lineage_and_tree.py  test_llm.py  test_metrics.py  test_metrics_registry.py  test_net_score.py  test_reproducibility.py  test_reviewedness.py  test_scoring.py  test_scoring_engine.py  test_selenium_frontend.py  test_urls.py  test_utils.py
(+4 files in other folders)
