[project]
name = "acme-cli"
version = "0.1.0"
description = "ACME internal CLI for trustworthy model reuse scoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<0.13",
    "huggingface-hub>=0.23",
    "httpx>=0.27",
    "pydantic>=2.8",
    "tqdm>=4.66",
    "cachetools>=5.3",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "selenium>=4.15",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
